--- a/FinalParactice.html
+++ b/FinalParactice.html
@@ -34,7 +34,7 @@
 
         <section>
             <h2> Some relational Photo</h2>
-            <img src = "/FInal/IT.jpeg" width = "319.7" height = "183" alt = "Image for Information Technology"> 
-            <img src = "/FInal/Business.jpeg" width = "275" height = "183" alt = "Image for Business"> 
-            <img src = "/FInal/Philosophy.jpeg" width = "183" height = "183" alt = "Image for Philosophy"> 
+            <img src = "IT.jpeg" width = "319.7" height = "183" alt = "Image for Information Technology"> 
+            <img src = "Business.jpeg" width = "275" height = "183" alt = "Image for Business"> 
+            <img src = "Philosophy.jpeg" width = "183" height = "183" alt = "Image for Philosophy"> 
 </html>
